# OpenGL-hw

./: CMakeLists.txt  Camera.cpp  Camera.h  OpenGLWidget.cpp  OpenGLWidget.h  QtOpenGLDemo.cpp  QtOpenGLDemo.h  QtOpenGLDemo.ui  README.md  config.json  main.cpp  resources.qrc  textures.frag  ui_QtOpenGLDemo.h
shaders/: gray.frag  skybox.vert
